# crispino_pos

./: .gitignore
code/bankomat/: meson.build
code/bankomat/include/: bankomat.h  checkIfInt.h
code/bankomat/src/: bankomat.cpp  main.cpp
doc/: main.tex
doc/POS_Projekt/: main.tex
